<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/edit"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/edit"/>

    <item
        android:title="@string/delete"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/discard"
        android:icon="@drawable/ic_discard"/>

    <item android:title="@string/search"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/search"
        android:icon="@drawable/ic_search"/>

    <item android:title="@string/exit"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/Exit"/>

    <item android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/settings"/>

</menu>
