<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    card_view:cardCornerRadius="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <ImageView
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:src="@drawable/thumb_1_0"
            android:contentDescription="@string/thumbnail"
            android:layout_margin="7dp"
            android:id="@+id/img_row"/>


        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="7dp"
                android:id="@+id/tvTitle"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#616161"
                android:text="@string/title"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tvDescription"
                android:textStyle="italic"
                android:textSize="15sp"
                android:text="@string/description"/>

        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete_image"
                android:layout_margin="7dp"
                android:id="@+id/img_row_delete"
                android:tint="@color/grey_500"/>

            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:src="@drawable/ic_make_copy"
                android:contentDescription="@string/add_image"
                android:layout_margin="7dp"
                android:id="@+id/img_row_add"
                android:tint="@color/grey_500"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>